<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/mnu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/clear_search"
        android:id="@+id/mnu_clear_search"
        app:showAsAction="never"/>

    <item
        android:title="@string/reload"
        android:id="@+id/mnu_reload"
        app:showAsAction="never"/>

    <item android:id="@+id/mnu_toggle_polling"
        app:showAsAction="never"
        android:title="@string/start_polling"/>

    <item android:id="@+id/mnu_manual_check"
        android:title="@string/manual_check"
        app:showAsAction="never"/>

</menu>